Estruturação dos cursos de Design Web e Javascript

--- a/design-web-2020_1.html
+++ b/design-web-2020_1.html
@@ -17,6 +17,7 @@ Released   : 20130902
 	<meta name="keywords" content="Professor, Pesquisador" />
 	<meta name="description" content="" />
 	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900" rel="stylesheet" />
+	<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" />
 	<link href="./css/default.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="./css/fonts.css" rel="stylesheet" type="text/css" media="all" />
 
@@ -119,79 +120,304 @@ Released   : 20130902
 
 			</ul>
 		</div>
-		<!--
+		
 		<article id="featured">
 			<div class="title">
-				<h2>Calendário</h2>
-				<span class="byline">Datas importantes</span>
+				<h2>Aulas</h2>
+				<span class="byline">Materiais de apoio</span>
 			</div>
 			<ul class="style1">
 				<li class="first">
-					<p class="date"><a href="http://www2.sbc.org.br/csbc2020/">16<b>Nov</b></a></p>
-					<h3>XL Congresso da Sociedade Brasileira de Computação - CSBC 2020</h3>
-					<p><a href="http://www2.sbc.org.br/csbc2020/o-csbc/">O Congresso da Sociedade Brasileira de Computação (CSBC) é um evento científico, acadêmico e profissional realizado anualmente, desde 1980, pela SBC com a finalidade de integrar a comunidade de Computação do Brasil.</p>
+					<p class="date">Aula<b>1</b></p>
+					<a href="emConstrucao.html">
+						<h3>Introdução a Internet</h3>
+						<p>Discutindo a evolução da internet, tecnologias relacionadas, padrões web e protocolos mais usados.</p>
+					</a>
+				</li>
+
+				<li>
+					<p class="date">Aula<b>2</b></p>
+					<a href="emConstrucao.html">
+						<h3>Introdução ao HTML</h3>
+						<p>Linguagens de marcação e dados semi-estruturados; HTML - marcações e sintaxe básica. Aprenda sobre marcações de texto e listas.</p>
+					</a>	
 				</li>
 				<li>
-					<p class="date"><a href="https://cbie.ceie-br.org/2020/">24<b>Nov</b></a></p>
-					<h3>Congresso Brasileiro de Informática na Educação (CBIE)</h3>
-					<p><a href="https://cbie.ceie-br.org/2020/sobre.html">O CBIE é um evento anual da SBC, que promove um fórum para a comunidade da área de Informática na Educação, visando a troca de informações e o estabelecimento de metas para superar os desafios educacionais do Brasil.</a></p>
+					<p class="date">Aula<b>3</b></p>
+					<a href="emConstrucao.html">
+						<h3>HTML - Links e Imagens</h3>
+						<p>Aprenda as marcações básicas para exibição de imagens e links. Aprenda sobre endereçamento de recursos. </p>
+					</a>
 				</li>
 				<li>
-					<p class="date"><a href="https://webmedia.org.br/2020/">30<b>Nov</b></p>
-					<h3>Simpósio Brasileiro de Sistemas Multimídia e Web - Webmedia</h3>
-					<p><a href="https://webmedia.org.br/2020/">Promovido anualmente pela SBC, o WebMedia é o principal evento do tema no Brasil e uma excelente oportunidade de intercâmbios científico e técnico entre alunos, pesquisadores e profissionais das áreas de Multimídia, Hipermídia e Web. 
-					</a></p>
+					<p class="date">Aula<b>4</b></p>
+					<a href="./design_web/aula4.html">
+						<h3>HTML - Tabelas e Frames</h3>
+						<p>Organize dados tabulares utilizando marcações para tabelas. O que são frames e como utilizá-los para <em>mashups</em>.</em></p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>5</b></p>
+					<a href="./design_web/aula5.html">
+						<h3>Arquitetura da Internet</h3>
+						<p>Entenda como está organizada a rede mundial de computadores, seus componentes e protocolos principais.</p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>6</b></p>
+					<a href="emConstrucao.html">
+						<h3>Formulários</h3>
+						<p>Como enviar dados para o servidor através de páginas HTML utilizando formulários.</p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>7</b></p>
+					<a href="#aula3">
+						<h3>HTML 5</h3>
+						<p>Aprenda sobre os novos recursos disponíveis na versão HTML5. O que é HTML semântico e qual a importância em utilizá-lo?</p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>8</b></p>
+					<a href="#aula6">
+						<h3>Cascade Style Sheet - CSS</h3>
+						<p>Introdução ao CSS - sintaxe e famílias de propriedades. Seletores de CSS. Bordas, margens e espaçamento interno de elementos.</p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>9</b></p>
+					<a href="#aula8">
+						<h3>CSS - Cores e Imagens</h3>
+						<p>Aprimore a apresentação de sites com cores e imagens de fundo. </p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>10</b></p>
+					<a href="#aula8">
+						<h3>CSS - Propriedades tipográficas e fontes</h3>
+						<p>Aprenda a manipular espaçamentos de fontes e linhas e estilos diversos.</p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>11</b></p>
+					<a href="#aula7">
+						<h3>Diagramação de sites com CSS</h3>
+						<p>Aprenda a esquematizar telas e objetos. Posicionamento, altura, largura e sobreposição de elementos.</p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>12</b></p>
+					<a href="#aula9">
+						<h3>CSS3</h3>
+						<p>Aprenda sobre as novidades trazidas pelo CSS3, como pseudo-classes e pseudo-elementos; efeitos de borda e sombra.</p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>13</b></p>
+					<a href="#aula9">
+						<h3>CSS3 - Cores e Fundos</h3>
+						<p>Aprenda a utilizar recursos de transparências e gradientes.</p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>14</b></p>
+					<a href="#aula9">
+						<h3>CSS3 - Animação</h3>
+						<p>Aprenda a utilizar recursos de transformações e transições.</p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>15</b></p>
+					<a href="#aula9">
+						<h3>Interface de dispositivos móveis</h3>
+						<p>Aprenda sobre viewport e os recursos de media query. Projeto de interfaces baseados em grids.</p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>16</b></p>
+					<a href="#aula9">
+						<h3>Frameworks de CSS e o Bootstrap</h3>
+						<p>Buscando componentes de terceiros para agilizar projetos. </p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>17</b></p>
+					<a href="#aula9">
+						<h3><b>U</b>ser E<b>x</b>perience - UX</h3>
+						<p>De que formas podemos conceber projetos de interfaces mais inclusivos e atraentes aos nossos clientes? </p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>18</b></p>
+					<a href="#aula9">
+						<h3>UX - Traçando um público-alvo</h3>
+						<p>Investigando o perfil do usuários mais recorrentes. </p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>19</b></p>
+					<a href="#aula9">
+						<h3>UX - Internet Inclusiva</h3>
+						<p>Recursos para tornar a Web mais inclusiva.</p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>20</b></p>
+					<a href="#aula9">
+						<h3>UX - Usabilidade</h3>
+						<p>Como avaliar a qualidade das interfaces produzidas?</p>
+					</a>
 				</li>
 			</ul>
 		</article>
-		
+		<!--
 		<article id="news">
 			<div class="title">
-				<h2>Participações</h2>
-				<span class="byline">Recentes</span>
+				<h2>Laboratórios</h2>
+				<span class="byline">Atividades recomendadas</span>
 			</div>
 
 			<div class="new">
-				<figure>
-					<img class="poster" src="./images/eventos/sbsi2020.png" alt="SBSI 2020"/>
-					<figcaption>Simpósio Brasileiro de Sistemas de Informação SBSI 2020</figcaption>
-				</figure>
-				<p class="date-poster">
-					<b>6</b> de Novembro <span>2020</span>
-				</p>
-				<p>
-					<a href="https://www.researchgate.net/publication/343452639_Analyzing_Social_Relations_in_Startup_Ecosystems">Apresentamos na trilha principal do evento o trabalho intitulado <b>"Analyzing Social Relations in Startup Ecosystems"</b>. Autores: Rafael Escalfoni, Mônica F. da Silva e Jonice Oliveira.</a>
-				</p>
+				<div class="media-icon">
+					<span class="icon">
+						<i class="fa fa-newspaper-o fa-3x" aria-hidden="true"></i>
+					</span>
+				</div>
+				<div class="media-body">
+					<h3>
+						<span>Laboratório 1</span> - Parágrafos e Listas
+					</h3>
+					<p>Exercícios com parágrafos, manipulação de textos e listas</p>
+					<a class="btn" href="#lab1">Veja mais</a>
+				</div>
 			</div>
 
 			<div class="new">
-				<figure>
-					<img class="poster" src="./images/eventos/sbsi2020.png" alt="SBSI 2020"/>
-					<figcaption>Simpósio Brasileiro de Sistemas de Informação SBSI 2020</figcaption>
-				</figure>
-				<p class="date-poster">
-					<b>6</b> de Novembro <span>2020</span>
-				</p>
-				<p>
-					<a href="https://www.researchgate.net/publication/345747252_Coral_Platform_The_Smart_Startup_Ecosystem_Tool">Apresentamos no Encontro de Inovação em Sistemas de informação um demo sobre a ferramenta Coral. Artigo intitulado <b>"Coral Platform: The Smart Startup Ecosystem Tool"</b>. Autores: Rafael Escalfoni, Leonardo Marinho, Camila Lacerda, Rodrigo Santos, Kesia Mamede, Mônica F. da Silva e Jonice Oliveira.</a>
-				</p>
+				<div class="media-icon">
+					<span class="icon">
+						<i class="fa fa-newspaper-o fa-3x" aria-hidden="true"></i>
+					</span>
+				</div>
+				<div class="media-body">
+					<h3>
+						<span>Laboratório 2</span> - Tabelas
+					</h3>
+					<p>Exercícios com tabelas.</p>
+						<a class="btn" href="#lab2">Veja mais</a>
+				</div>
 			</div>
 
 			<div class="new">
-				<figure>
-					<img class="poster" src="./images/eventos/etarserra2020.png" alt="Etarserra 2020"/>
-					<figcaption>Exposição de Trabalhos Acadêmicos da Região Serrana - Etarserra 2020</figcaption>
-				</figure>
-				<p class="date-poster">
-					<b>15</b> Outubro <span>2020</span>
-				</p>
-				<p>
-					<a href="http://www.etarserra.iprj.uerj.br/orais-sessoes-tematicas/">ETARSERRA é um evento acadêmico-científico, tecnológico e cultural, que tem como proposta reunir estudantes de ensino médio, graduação e pós-graduação da região serrana do estado do RJ e regiões vizinhas. </a>
-				</p>
+				<div class="media-icon">
+					<span class="icon">
+						<i class="fa fa-newspaper-o fa-3x" aria-hidden="true"></i>
+					</span>
+				</div>
+				<div class="media-body">
+					<h3><span>Laboratório 3</span> - Diagramação de site</h3>
+					<p>Diagramação com DIVs </p>
+					<a class="btn" href="#lab3">Veja mais</a>
+				</div>
+			</div>
+
+			<div class="new">
+				<div class="media-icon">
+					<span class="icon">
+						<i class="fa fa-newspaper-o fa-3x" aria-hidden="true"></i>
+					</span>
+				</div>
+				<div class="media-body">
+					<h3><span>Laboratório 4</span> - Diagramação de sites</h3>
+					<p>Diagramação com marcações semânticas.</p>
+					<a class="btn" href="#lab4">Veja mais</a>
+				</div>
+			</div>
+			<div class="new">
+				<div class="media-icon">
+					<span class="icon">
+						<i class="fa fa-newspaper-o fa-3x" aria-hidden="true"></i>
+					</span>
+				</div>
+				<div class="media-body">
+					<h3><span>Laboratório 5</span> - CSS</h3>
+					<p>Diagramação de site e uso de CSS.</p>
+					<a class="btn" href="#lab5">Veja mais</a>
+			</div>
+			<div class="new">
+				<div class="media-icon">
+					<span class="icon">
+						<i class="fa fa-newspaper-o fa-3x" aria-hidden="true"></i>
+					</span>
+				</div>
+				<div class="media-body">
+					<h3><span>Laboratório 6</span> - CSS</h3>
+					<p>Diagramação de sites, posicionamento de objetos, tratamento de imagens</p>
+					<a class="btn" href="#lab6">Veja mais</a>
+				</div>
+			</div>
+			<div class="new">
+				<div class="media-icon">
+					<span class="icon">
+						<i class="fa fa-newspaper-o fa-3x" aria-hidden="true"></i>
+					</span>
+				</div>
+				<div class="media-body">
+					<h3><span>Laboratório 7</span> - CSS</h3>
+					<p>Construção de sites, efeitos de transparência, transformações.</p>
+					<a class="btn" href="#lab7">Veja mais</a>
+				</div>
+			</div>
+			<div class="new">
+				<div class="media-icon">
+					<span class="icon">
+							<i class="fa fa-newspaper-o fa-3x" aria-hidden="true"></i>
+					</span>
+				</div>
+				<div class="media-body">
+						<h3><span>Laboratório 8</span> - CSS</h3>
+						<p>Construção de sites, efeitos de transparência, transformações e animações.</p>
+						<a class="btn" href="#lab8">Veja mais</a>
+				</div>
+			</div>
+			<div class="new">
+				<div class="media-icon">
+					<span class="icon">
+						<i class="fa fa-newspaper-o fa-3x" aria-hidden="true"></i>
+					</span>
+				</div>
+				<div class="media-body">
+						 
+						<h3><span>Laboratório 9</span> - CSS</h3>
+						<p>Construção de sites, transformações e animações</p>
+					   <a class="btn" href="#lab9">Veja mais</a>
+				</div>
+			</div>
+			<div class="new">
+				<div class="media-icon">
+					<span class="icon">
+						<i class="fa fa-newspaper-o fa-3x" aria-hidden="true"></i>
+					</span>
+				</div>
+				<div class="media-body">
+					<h3><span>Laboratório 10</span> - JavaScript 1</h3>
+					<p>Programas em Javascript</p>
+					<a class="btn" href="#lab10">Veja mais</a>
+				</div>
+			</div>
+			<div class="new">
+				<div class="media-icon">
+					<span class="icon">
+						<i class="fa fa-newspaper-o fa-3x" aria-hidden="true"></i>
+					</span>
+				</div>
+				<div class="media-body">
+					<h3><span>Laboratório 10</span> - JQuery</h3>
+					<p>Programas em jQuery</p>
+					<a class="btn" href="#lab11">Veja mais</a>
+				</div>
 			</div>
 		</article>
 		-->
-		
 		<footer id="copyright">
 			<img src="./images/cefet.png">
 			<span>Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</span>
