--- a/prog-clientes-web-2020_1.html
+++ b/prog-clientes-web-2020_1.html
@@ -134,6 +134,149 @@ Released   : 20130902
 			</div>
 			<div style="clear:left"></div>
 		</div>
+		<article id="featured">
+			<div class="title">
+				<h2>Aulas</h2>
+				<span class="byline">Materiais de apoio</span>
+			</div>
+			<ul class="style1">
+				<li class="first">
+					<p class="date">Aula<b>1</b></p>
+					<a href="emConstrucao.html">
+						<h3>Introdução a Programação Client side</h3>
+						<p>Discutindo a evolução da internet, tecnologias relacionadas e a guerra dos navegadores.</p>
+					</a>
+				</li>
+
+				<li>
+					<p class="date">Aula<b>2</b></p>
+					<a href="emConstrucao.html">
+						<h3>Rodando Javascript</h3>
+						<p>Apresentando maneiras de executar seu código Javascript. Monte sua caixa de ferramentas de desenvolvimento JS.</p>
+					</a>	
+				</li>
+
+				<li>
+					<p class="date">Aula<b>3</b></p>
+					<a href="emConstrucao.html">
+						<h3>Linguagem Javascript</h3>
+						<p>Conceitos básicos a respeito da sintaxe e estrutura da linguagem.</p>
+					</a>	
+				</li>
+
+				<li>
+					<p class="date">Aula<b>4</b></p>
+					<a href="emConstrucao.html">
+						<h3>Estruturas de Repetição</h3>
+						<p>Conheça as estruturas de iteração em Javascript.</p>
+					</a>	
+				</li>
+
+				<li>
+					<p class="date">Aula<b>5</b></p>
+					<a href="emConstrucao.html">
+						<h3>Tipos de dados</h3>
+						<p>Conheça os tipos primitivos da linguagem Javascript. Conheça algumas peculiaridades da linguagem.</p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>6</b></p>
+					<a href="./design_web/aula4.html">
+						<h3>Arrays e Objetos</h3>
+						<p>Descubra estruturas mais complexas em Javascript.</em></p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>7</b></p>
+					<a href="./design_web/aula5.html">
+						<h3>Visibilidade de variáveis</h3>
+						<p>Entenda como o escopo das variáveis é definida em Javascript.</p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>8</b></p>
+					<a href="emConstrucao.html">
+						<h3>Funções</h3>
+						<p>Funções de primeira classe? Hoisting? Callback? Lambda? Melhor não perder essa aula ;-)</p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>9</b></p>
+					<a href="#aula3">
+						<h3>String API</h3>
+						<p>Conhecendo os métodos do objeto String</p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>10</b></p>
+					<a href="#aula6">
+						<h3>Date API</h3>
+						<p>Conhecendo os métodos do objeto Date.</p>
+					</a>
+				</li>
+
+				<li>
+					<p class="date">Aula<b>11</b></p>
+					<a href="./desenv_web/aula11.html">
+						<h3>jQuery</h3>
+						<p>Conceitos básicos, seletores. Efeitos e manipulação do DOM. Eventos.</p>
+					</a>
+				</li>
+
+				<li>
+					<p class="date">Aula<b>12</b></p>
+					<a href="#aula8">
+						<h3>Manipulando o DOM</h3>
+						<p>Manipulando páginas web com Javascript. </p>
+					</a>
+				</li>
+
+				<li>
+					<p class="date">Aula<b>13</b></p>
+					<a href="#aula7">
+						<h3>Requisições HTTP e jQuery AJAX</h3>
+						<p>Como funciona o HTTP, seus métodos, código de status, cabeçalhos e formatos. Carregando páginas dinamicamente com o jQuery.</p>
+					</a>
+				</li>
+				
+				<li>
+					<p class="date">Aula<b>14</b></p>
+					<a href="#aula7">
+						<h3>jQuery e plugins</h3>
+						<p>O que é um plugin? Escrevendo plugins.</p>
+					</a>
+				</li>
+
+				<li>
+					<p class="date">Aula<b>15</b></p>
+					<a href="#aula9">
+						<h3>API Fetch</h3>
+						<p>Aprenda sobre as novidades trazidas pelo CSS3, como pseudo-classes e pseudo-elementos; efeitos de borda e sombra.</p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>16</b></p>
+					<a href="#aula9">
+						<h3>Armazenamento - Web Storage</h3>
+						<p>Session Storage e Local Storage.</p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>17</b></p>
+					<a href="#aula9">
+						<h3>ECMAScript 6</h3>
+						<p>Compatibilidade e o Babel.</p>
+					</a>
+				</li>
+				<li>
+					<p class="date">Aula<b>18</b></p>
+					<a href="#aula8">
+						<h3>ECMAScript 6 e a componentização</h3>
+						<p>Modularização e programação orientada a objetos.</p>
+					</a>
+				</li>
+			</ul>
+		</article>
 		<!--
 		<article id="featured">
 			<div class="title">
