--- a/prog-clientes-web-2020_1.html
+++ b/prog-clientes-web-2020_1.html
@@ -225,7 +225,7 @@ Released   : 20130902
 
 				<li>
 					<p class="date">Aula<b>12</b></p>
-					<a href="#aula8">
+					<a href="./desenv_web/aula12.html">
 						<h3>Manipulando o DOM</h3>
 						<p>Manipulando páginas web com Javascript. </p>
 					</a>
