Aula 20210115 design web pronta

--- a/design-web-2020_1.html
+++ b/design-web-2020_1.html
@@ -165,14 +165,14 @@ Released   : 20130902
 				</li>
 				<li>
 					<p class="date">Aula<b>6</b></p>
-					<a href="emConstrucao.html">
+					<a href="./design_web/aula6.html">
 						<h3>Formulários</h3>
 						<p>Como enviar dados para o servidor através de páginas HTML utilizando formulários.</p>
 					</a>
 				</li>
 				<li>
 					<p class="date">Aula<b>7</b></p>
-					<a href="#aula3">
+					<a href="./design_web/aula7.html">
 						<h3>HTML 5</h3>
 						<p>Aprenda sobre os novos recursos disponíveis na versão HTML5. O que é HTML semântico e qual a importância em utilizá-lo?</p>
 					</a>
