tarefas do coursera implementadas

--- a/design-web-2020_1.html
+++ b/design-web-2020_1.html
@@ -1,15 +1,4 @@
 <!DOCTYPE html>
-<!--
-Design by TEMPLATED
-http://templated.co
-Released for free under the Creative Commons Attribution License
-
-Name       : Skeleton 
-Description: A two-column, fixed-width design with dark color scheme.
-Version    : 1.0
-Released   : 20130902
-
--->
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8" >
@@ -81,7 +70,7 @@ Released   : 20130902
 				<li><a href="https://Kenel1.github.io" target="_blank">Denzel Vianna de Farias</a></li>
 				<li><a href="http://everson121.github.io/" target="_blank">Everson Marqui Junior</a></li>
 				<li><a href="https://gabriel-sinigalhe.github.io/" target="_blank">Gabriel Araujo Sinigalhe</a></li>
-				<li><a href="https://SuperHugoBr64.github.io" target="_blank">Hugo Billé Martins</a></li>
+				<li><a href="https://sotiris64.github.io" target="_blank">Hugo Billé Martins</a></li>
 				<li><a href="https://gitisa07.github.io" target="_blank">Isabella Cabral Pinheiro</a></li>
 				<li><a href="" target="_blank">Jamily França Andrade</a></li>
 				<li><a href="https://joao-fernandez.github.io/" target="_blank">João Eduardo Pacheco Fernandez</a></li>
