--- a/ensino.html
+++ b/ensino.html
@@ -62,6 +62,14 @@ Released   : 20130902
 				<span class="byline"><a href="index.html">Início</a> >> Ensino</span>
 			</nav>
 			<h2>Turmas</h2>
+			<span class="subtitle">2020.2</span>
+			<h3>Graduação em Sistemas de Informação</h3>
+			<ul class="actions">
+				<li><a href="#" class="button">Banco de Dados 2</a></li>
+				<li><a href="fund-web-2020_1.html" class="button">Fundamentos da Web</a></li>
+				<li><a href="fund-si-2020_1.html" class="button">Fundamentos de Sistemas de Informação</a></li>
+				<li><a href="gci-2020_1.html" class="button">Gestão do Conhecimento e da Informação</a></li>
+			</ul>
 			<span class="subtitle">2020.1</span>
 			<h3>Graduação em Sistemas de Informação</h3>
 			<ul class="actions">
@@ -70,6 +78,7 @@ Released   : 20130902
 				<li><a href="fund-si-2020_1.html" class="button">Fundamentos de Sistemas de Informação</a></li>
 				<li><a href="gci-2020_1.html" class="button">Gestão do Conhecimento e da Informação</a></li>
 			</ul>
+			<span class="subtitle">2020</span>
 			<h3>Técnico em Informática</h3>
 			<ul class="actions">
 				<li><a href="design-web-2020_1.html" class="button">Design Web</a></li>
