correções em fund web 2020.2

--- a/fund-web-2020_2.html
+++ b/fund-web-2020_2.html
@@ -55,8 +55,8 @@ Released   : 20130902
 		</div>
 		<div id="welcome">
 			<div class="title">				
-				<h2>Fundamentos da Web - 2020.1</h2>
-				<span class="byline">Primeiro Semestre 2020 - 2<sup>0</sup> semestre</span>
+				<h2>Fundamentos da Web - 2020.2</h2>
+				<span class="byline">Primeiro Semestre 2020 - 2<sup>o</sup> semestre</span>
 			</div>
 			<nav class="breadcrumb">
 				<span class="byline"><a href="ensino.html">Ensino</a> >> Fundamentos da Web</span>
@@ -86,7 +86,7 @@ Released   : 20130902
 			</div>
 			<div class="boxB">
 			<ul class="actions">
-				<li><a href="#">Luan Enzler Anuda</a></li>
+				<li><a href="#"></a></li>
 				
 			</ul>
 			</div>
