atualizações na turma de fund web 2020.2

--- a/design-web-2020_1.html
+++ b/design-web-2020_1.html
@@ -83,7 +83,7 @@
 				<li><a href="" target="_blank">João Victor Marcolino da Conceição</a></li>
 				<li><a href="https://Kauavillan.github.io" target="_blank">Kauã Villa Nova da Silva</a></li>
 				<li><a href="https://KayllaneCardoso04.github.io" target="_blank">Kayllane Bastos Sanches Cardoso</a></li>
-				<li><a href="https://lucasmarra-programmer.github.io" target="_blank">Lucas Marra dos Santos</a></li>
+				<li><a href="https://lucasmarra08.github.io/" target="_blank">Lucas Marra dos Santos</a></li>
 				<li><a href="" target="_blank">Luiz Gabriel de Souza Oliveira</a></li>
 				<li><a href="https://ellerluiza.github.io" target="_blank">Luiza Barroso Leal Eller</a></li>
 				<li><a href="https://mauriciopara.github.io" target="_blank">Maurício Pará Roza Muniz de Aguiar</a></li>
