--- a/fund-web-2020_2.html
+++ b/fund-web-2020_2.html
@@ -81,13 +81,29 @@ Released   : 20130902
 			<h3>Alunos</h3>
 			<div class="boxB">
 			<ul class="actions">
-				<li><a href="https://lucasmarra08.github.io/">Lucas Marra dos Santos</a></li>
+				<li><a href="#" target="_blank">André de Assis Pinto</a></li>
+                <li><a href="#" target="_blank">Arthur Murray Bordallo</a></li>
+                <li><a href="#" target="_blank">Felipe Lourenço Becker Lima</a></li>
+                <li><a href="#" target="_blank">Gabriel Atila Zimbrão Nogueira</a></li>
+                <li><a href="#" target="_blank">Guilherme Francisco de Oliveira Almeida</a></li>
+                <li><a href="#" target="_blank">Guilherme Perdigão Benvenuti</a></li>
+                <li><a href="#" target="_blank">Guilherme Richard Sacramento Borges</a></li>
+                <li><a href="#" target="_blank">Jéssica Adeliny Soares Sanglard</a></li>
+                <li><a href="https://joaoaugustomezentier.github.io/" target="_blank">João Augusto Mezentier Fernandes</a></li>
+                <li><a href="#" target="_blank">José Victor Heringer da Silva</a></li>
 			</ul>
 			</div>
 			<div class="boxB">
 			<ul class="actions">
-				<li><a href="#"></a></li>
-				
+                <li><a href="#" target="_blank">Juliana Lopes Almeida</a></li>
+                <li><a href="#" target="_blank">Leonardo Gonçalves de Sá</a></li>
+                <li><a href="#" target="_blank">Lucas de Souza Mansur Pereira</a></li>
+                <li><a href="#" target="_blank">Matheus da Silva Correia</a></li>
+                <li><a href="#" target="_blank">Rannier Mattos dos Santos</a></li>
+                <li><a href="#" target="_blank">Rebeca Mari Assumpção dos Santos</a></li>
+                <li><a href="#" target="_blank">Renan Tiberto do Nascimento</a></li>
+                <li><a href="#" target="_blank">Sérgio de Souza Lima Sobrinho</a></li>
+                <li><a href="#" target="_blank">Thiago de Sá Ferreira Portella Lemos Leal</a></li>
 			</ul>
 			</div>
 			<div style="clear: left"></div>
