--- a/fund-web-2020_2.html
+++ b/fund-web-2020_2.html
@@ -81,7 +81,7 @@ Released   : 20130902
 			<h3>Alunos</h3>
 			<div class="boxB">
 			<ul class="actions">
-				<li><a href="#" target="_blank">André de Assis Pinto</a></li>
+				<li><a href="https://andre-assis.github.io/" target="_blank">André de Assis Pinto</a></li>
                 <li><a href="#" target="_blank">Arthur Murray Bordallo</a></li>
                 <li><a href="#" target="_blank">Felipe Lourenço Becker Lima</a></li>
                 <li><a href="#" target="_blank">Gabriel Atila Zimbrão Nogueira</a></li>
@@ -90,7 +90,7 @@ Released   : 20130902
                 <li><a href="#" target="_blank">Guilherme Richard Sacramento Borges</a></li>
                 <li><a href="#" target="_blank">Jéssica Adeliny Soares Sanglard</a></li>
                 <li><a href="https://joaoaugustomezentier.github.io/" target="_blank">João Augusto Mezentier Fernandes</a></li>
-                <li><a href="#" target="_blank">José Victor Heringer da Silva</a></li>
+                <li><a href="https://josevitorheringer.github.io/" target="_blank">José Victor Heringer da Silva</a></li>
 			</ul>
 			</div>
 			<div class="boxB">
