--- a/design-web-2020_1.html
+++ b/design-web-2020_1.html
@@ -64,7 +64,7 @@
 			<ul class="actions">
 				<li><a href="https://analuisaferro.github.io" target="_blank">Ana Luisa Pereira Ferro</a></li>
 				<li><a href="https://gomesart.github.io/" target="_blank">Arthur Ferreira Gomes</a></li>
-				<li><a href="" target="_blank">Bernardo Rocha dos Santos Jacob Cavalheiro</a></li>
+				<li><a href="#" target="_blank">Bernardo Rocha dos Santos Jacob Cavalheiro</a></li>
 				<li><a href="https://cleo-pereira.github.io/" target="_blank">Cléo Pereira e Ferreira</a></li>
 				<li><a href="https://daniela-moraesbr.github.io" target="_blank">Daniela Moreira Faria Moraes</a></li>
 				<li><a href="https://Kenel1.github.io" target="_blank">Denzel Vianna de Farias</a></li>
@@ -72,7 +72,7 @@
 				<li><a href="https://gabriel-sinigalhe.github.io/" target="_blank">Gabriel Araujo Sinigalhe</a></li>
 				<li><a href="https://sotiris64.github.io" target="_blank">Hugo Billé Martins</a></li>
 				<li><a href="https://gitisa07.github.io" target="_blank">Isabella Cabral Pinheiro</a></li>
-				<li><a href="" target="_blank">Jamily França Andrade</a></li>
+				<li><a href="#" target="_blank">Jamily França Andrade</a></li>
 				<li><a href="https://joao-fernandez.github.io/" target="_blank">João Eduardo Pacheco Fernandez</a></li>
 				<li><a href="https://JoaoLuizRSilva.github.io" target="_blank">João Luiz Rezende Silva</a></li>
 
@@ -80,14 +80,14 @@
 			</div>
 			<div class="boxB">
 			<ul class="actions">
-				<li><a href="" target="_blank">João Victor Marcolino da Conceição</a></li>
+				<li><a href="#" target="_blank">João Victor Marcolino da Conceição</a></li>
 				<li><a href="https://Kauavillan.github.io" target="_blank">Kauã Villa Nova da Silva</a></li>
 				<li><a href="https://KayllaneCardoso04.github.io" target="_blank">Kayllane Bastos Sanches Cardoso</a></li>
 				<li><a href="https://lucasmarra08.github.io/" target="_blank">Lucas Marra dos Santos</a></li>
-				<li><a href="" target="_blank">Luiz Gabriel de Souza Oliveira</a></li>
+				<li><a href="#" target="_blank">Luiz Gabriel de Souza Oliveira</a></li>
 				<li><a href="https://ellerluiza.github.io" target="_blank">Luiza Barroso Leal Eller</a></li>
 				<li><a href="https://mauriciopara.github.io" target="_blank">Maurício Pará Roza Muniz de Aguiar</a></li>
-				<li><a href="" target="_blank">Nicolas Dias Eller</a></li>
+				<li><a href="#" target="_blank">Nicolas Dias Eller</a></li>
 				<li><a href="pablo00balman.github.io/ " target="_blank">Pablo Balman Cereja Badini</a></li>
 				<li><a href="https://victot21.github.io" target="_blank">Victor Aquino de Avellar Lacerda Lomba</a></li>
 				<li><a href="https://StroxG0d.github.io" target="_blank">Yan Machado Leoncio</a></li>
