--- a/design_web/laboratorios/lab03/index.html
+++ b/design_web/laboratorios/lab03/index.html
@@ -1,10 +1,12 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="./css/estilo.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Aula de Diagramação</title>
 </head>
 <body>
-	
+    
 </body>
 </html>
